# Nexium

./: CMakeLists.txt
cmake/: EmbedAssets.cmake  EmbedShaders.cmake
include/NX/: NX_Math.h
source/: NX_Init.cpp
source/Detail/GPU/: Buffer.hpp
tests/: CMakeLists.txt
